fix bk contrast

--- a/src/pages/learn/Mission.module.css
+++ b/src/pages/learn/Mission.module.css
@@ -1,3 +1,7 @@
+.missiontout {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 @media screen and (min-width: 600px) {
   .missiontout {
     display: grid;
